Fixed issue where icon would not show on some machines. Also if one sorted on far right in small screen it would force horizontal scroll.

--- a/f1_info_frontend/src/app/reports/report-element/report-element.component.scss
+++ b/f1_info_frontend/src/app/reports/report-element/report-element.component.scss
@@ -5,6 +5,10 @@
 
   th {
     padding: 1rem 0 1rem 0;
+
+    fa-icon {
+      margin-left: 0.25rem;
+    }
   }
   td {
     background: var(--bkg-color);
@@ -22,26 +26,8 @@
     user-select: none;
     cursor: pointer;
 
-    &::after {
-      position: absolute;
-      right: -15px;
-      top: 0;
-    }
-
     &:hover {
       color: var(--primary-color);
-    }
-
-    &--ascending {
-      &::after {
-        content: '⮟';
-      }
-    }
-
-    &--descending {
-      &::after {
-        content: '⮝';
-      }
     }
   }
 }
